Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11545

debugfs: "ncheck -c" does not work correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • None
    • Lustre 2.12.0
    • 3
    • 9223372036854775807

      I noticed when investigating LU-11446 that debugfs is unhappy about the file type stored in the directory (verified if the "-c" option is used):

      debugfs -c /dev/loop0
      debugfs 1.44.3.wc1
      debugfs: ncheck -c 164
      Inode   Pathname
      164     /REMOTE_PARENT_DIR/0x200000204:0x1:0x0   <--- BAD FILETYPE
      debugfs: ls -l /REMOTE_PARENT_DIR
      :
      :
          164  100644 (17)      0      0       0 
      

      However, it appears the same problem is true for other directories, so it is not an issue with REMOTE_PARENT_DIR. I suspect it is instead a problem that ncheck -c is not masking off the dirdata flags from the filetype.

      Also, it looks like the usage message for "ls" is not including the "-D" option to print the dirdata fields.

            dongyang Dongyang Li
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: