LU-11545 debugfs: allow <inode> for ncheck

If the arg string is of the form <ino>, allow it
for ncheck.
Improve the error message, use "Invalid inode number"
instead of "Bad inode", which implies the inode
content being bad.

Change-Id: Ib6d7eb53342d93c9e8ecf25835d8ff65bc340980
Signed-off-by: Li Dongyang <dongyangli@ddn.com>
Reviewed-on: https://review.whamcloud.com/44388
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>